# facedetection-ruby

./: .gitignore  Cargo.toml  Rakefile  Readme.md  libfacedetection.gemspec
.github/workflows/: release.yml  workflow.yml
ext/libfacedetection/: Cargo.toml  extconf.rb
ext/libfacedetection/src/: lib.rs
lib/: libfacedetection.rb
lib/libfacedetection/: facedetect.rb  version.rb
src/: lib.rs
tests/: test_detection.rb
