[package]
name = "libfacedetection-ruby"
version = "0.0.1"
edition = "2021"
publish = false
authors = ["Fetlife <dev@fetlife.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libfacedetection = { git = "https://github.com/fetlife/libfacedetection-rs.git", optional = true, rev="7426f33ba101514932a5ef58456761735c7bf3dc" }
opencv = { version = "0.88.6", optional = true, features=["clang-runtime"] }
magnus = { version="0.6.2" }

[lib]
name = "libfacedetection_ruby"
crate-type = ["cdylib"]

[features]
default = ["libfacedetection"]
