[package]
name = "libfacedetection-ruby"
version = "0.0.1"
edition = "2021"
publish = false
authors = ["Fetlife <dev@fetlife.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
libfacedetection = { git = "https://github.com/fetlife/libfacedetection-rs.git", optional = true, rev="d127c777a04fdbb20348c736ae18e4c1020b7d42" }
opencv = { version = "0.66", optional = true }
rutie = { version="0.8.4", features = ["no-link"] }

[lib]
name = "libfacedetection"
crate-type = ["cdylib"]

[features]
default = ["libfacedetection"]
