[package]
name = "libfacedetection-ruby"
version = "0.0.1"
edition = "2021"
publish = false
authors = ["Fetlife <dev@fetlife.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
libfacedetection = { git = "https://github.com/fetlife/libfacedetection-rs.git", optional = true, rev="fb20565063fa8017f096b9941bd4822d635bafaa" }
opencv = { version = "0.66", optional = true }
rutie = { version="0.8.4", features = ["no-link"] }

[lib]
name = "libfacedetection"
crate-type = ["cdylib"]

[features]
default = ["libfacedetection"]
